--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -28,13 +28,10 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border: 1px solid #ec7705;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   position: relative;
   /* for input label position*/
   text-align: center; }
-
-.col-6 {
-  width: 60%; }
 
 button, input {
   -webkit-box-sizing: border-box;
@@ -90,7 +87,16 @@ button:hover, input:hover {
   background: rgba(0, 0, 0, 0.85); }
 
 .modalContent {
-  width: 40%; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #eee;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  height: 50%;
+  width: 40%;
+  padding: 50px; }
 
 label {
   font: 300 0.6em "Merriweather", serif;
