--- a/public/css/header.css
+++ b/public/css/header.css
@@ -8,25 +8,16 @@ body {
   padding: 6px 10px 10px;
   background-color: #F4F4F4;
   margin-top: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  justify-content: flex-end;
+  align-items: center; }
 
 .logo {
   font: 400 2.25em "Vast Shadow", cursive;
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3; }
+  flex: 3; }
 
 .form-row {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border: 1px solid #ec7705;
   margin-left: 10px;
   position: relative;
@@ -49,6 +40,7 @@ button span {
   background-color: #ec7705;
   display: inline-block;
   -webkit-transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.4);
+  -moz-transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.4);
   transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.4); }
 
 .key {
@@ -57,9 +49,7 @@ button span {
   top: -30px;
   width: 20px;
   height: 17px;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  -webkit-transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
+  transform: translateX(-50%);
   transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4); }
 
 .keyDown {
@@ -70,8 +60,7 @@ button:hover {
   color: #ec7705; }
 
 input, button {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: transparent;
   border-style: none;
   padding: 10px 20px 10px;
@@ -91,18 +80,8 @@ label {
   left: 20px;
   opacity: 1;
   padding: 0 5px;
-  -webkit-transition: all 0.35s;
   transition: all 0.35s;
-  -webkit-transform: translateY(calc(-50% - 1px));
-          transform: translateY(calc(-50% - 1px)); }
-
-input::-webkit-input-placeholder {
-  font-size: 1em;
-  color: #999; }
-
-input:-ms-input-placeholder {
-  font-size: 1em;
-  color: #999; }
+  transform: translateY(calc(-50% - 1px)); }
 
 input::placeholder {
   font-size: 1em;
@@ -111,10 +90,10 @@ input::placeholder {
 /* adds input field name to top of field test */
 input:placeholder-shown + label {
   opacity: 0;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%); }
+  transform: translateY(100%); }
 
 input:focus {
   outline: none;
   border-color: #fff; }
+
 /*# sourceMappingURL=header.css.map */
