--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -8,25 +8,16 @@ body {
   padding: 6px 10px 10px;
   background-color: #F4F4F4;
   margin-top: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  justify-content: flex-end;
+  align-items: center; }
 
 .logo {
   font: 400 2.25em "Vast Shadow", cursive;
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3; }
+  flex: 3; }
 
 .form-row {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border: 1px solid #ec7705;
   margin-bottom: 30px;
   position: relative;
@@ -34,8 +25,7 @@ body {
   text-align: center; }
 
 button, input {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: transparent;
   border-style: none;
   outline: none;
@@ -57,9 +47,7 @@ button, input {
   top: -30px;
   width: 20px;
   height: 17px;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  -webkit-transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
+  transform: translateX(-50%);
   transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4); }
 
 .keyDown {
@@ -71,12 +59,8 @@ button:hover, input:hover {
 
 /* modal sign-up window*/
 .signUpModal {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -87,16 +71,20 @@ button:hover, input:hover {
   background: rgba(0, 0, 0, 0.85); }
 
 .modalContent {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #eee;
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  height: 50%;
+  transform: translateY(-50%);
+  height: 85%;
   width: 40%;
   padding: 50px; }
+
+.welcome h1 {
+  text-align: center;
+  font-size: 1.5em;
+  color: #999;
+  margin-bottom: 40px; }
 
 label {
   font: 300 0.6em "Merriweather", serif;
@@ -109,18 +97,8 @@ label {
   left: 20px;
   opacity: 1;
   padding: 0 5px;
-  -webkit-transition: all 0.35s;
   transition: all 0.35s;
-  -webkit-transform: translateY(calc(-50% - 1px));
-          transform: translateY(calc(-50% - 1px)); }
-
-input::-webkit-input-placeholder {
-  font: 300 1em "Merriweather", serif;
-  color: #999; }
-
-input:-ms-input-placeholder {
-  font: 300 1em "Merriweather", serif;
-  color: #999; }
+  transform: translateY(calc(-50% - 1px)); }
 
 input::placeholder {
   font: 300 1em "Merriweather", serif;
@@ -129,11 +107,37 @@ input::placeholder {
 /* adds input field name to top of field test */
 input:placeholder-shown + label {
   opacity: 0;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%); }
+  transform: translateY(100%); }
 
 input:focus {
   outline: none;
   border-color: #fff; }
+
+.modalBtn {
+  box-sizing: border-box;
+  border: 1px solid #999;
+  margin-bottom: 30px;
+  background-color: #999;
+  overflow: hidden; }
+
+.modalIcon {
+  position: absolute;
+  top: 3px;
+  left: -500px;
+  width: 30px;
+  z-index: 10;
+  color: white;
+  opacity: 0; }
+
+.iconRight {
+  left: 190px;
+  opacity: 1;
+  transition: all 0.45s cubic-bezier(0.31, -0.105, 0.43, 1.4); }
+
+.divider {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #999;
+  font-size: .8em; }
 
 /*# sourceMappingURL=modal.css.map */
