--- a/public/css/modal.scss
+++ b/public/css/modal.scss
@@ -98,10 +98,18 @@ button:hover {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    height: 50%;
+    height: 85%;
     width: 40%;
     padding: 50px;
 }
+
+.welcome h1 {
+    text-align: center;
+    font-size: 1.5em;
+    color: $secondaryColor;
+    margin-bottom: 40px;
+}
+
 
 
 input {
@@ -139,4 +147,35 @@ input:placeholder-shown+label {
 input:focus {
     outline: none;
     border-color: #fff;
+}
+
+.modalBtn {
+    box-sizing: border-box;
+    border: 1px solid $secondaryColor;
+    margin-bottom: 30px;
+    background-color: $secondaryColor;
+    overflow: hidden;
+}
+
+.modalIcon {
+    position: absolute;
+    top: 3px;
+    left: -500px;
+    width:30px;
+    z-index: 10;
+    color: white;
+    opacity: 0;
+}
+
+.iconRight {
+    left: 190px;
+    opacity: 1;
+     transition: all .45s cubic-bezier(0.31, -0.105, 0.43, 1.4);
+}
+
+.divider {
+    text-align: center;
+    margin-bottom: 30px;
+    color: $secondaryColor;
+    font-size: .8em;
 }
