--- a/public/css/modal.scss
+++ b/public/css/modal.scss
@@ -157,6 +157,11 @@ input:focus {
     overflow: hidden;
 }
 
+.signUpModal {
+    display: none;
+}
+
+
 .modalIcon {
     position: absolute;
     top: 3px;
